<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.Compra.AddCompraView">

    <EditText
        android:id="@+id/etDescripcionCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion_compra_hint" />

    <Spinner
        android:id="@+id/spinnerRecurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnAgregarRecurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_recurso_button"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnGuardarCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_compra_button"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnVerCompras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_compras_button"
        android:layout_marginTop="16dp" />

</LinearLayout>
